--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@fortawesome/fontawesome-free": "^7.1.0",
+    "@hookform/resolvers": "^5.2.2",
     "@mui/material": "^7.3.6",
+    "@tanstack/react-query": "^5.90.19",
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "chart.js": "^4.5.1",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.11.0"
+    "react-hook-form": "^7.71.1",
+    "react-router-dom": "^7.11.0",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
